--- a/myPoliFile/it.lproj/Localizable.strings
+++ b/myPoliFile/it.lproj/Localizable.strings
@@ -88,3 +88,4 @@
 //Enroll
 "enroll.enroll" = "Iscriviti";
 "enroll.message" = "Devi iscriverti al corso per vedere il suo contentuto";
+"enroll.enrollment" = "Iscrizione";
