--- a/myPoliFile/en.lproj/Localizable.strings
+++ b/myPoliFile/en.lproj/Localizable.strings
@@ -73,6 +73,8 @@
 "error.download" = "An error occured while downloading the file.";
 "error.userdata" = "Unable to find your personal data";
 "error.unablestart" = "The error that occurred did not allow the application to start";
+"error.web.invalidToken" = "Your access token has changed. Plese login again.";
+"error.web.generic" = "A server side error happens. Please try later.";
 
 //Alerts
 "alert.deletefoldertext" = "Are you sure you want to delete folder %@ and all the files it contains?";
